--- a/resource/kiesconv.rc
+++ b/resource/kiesconv.rc
@@ -13,12 +13,12 @@ IDI_ICN ICON "kiesconv.ico"
 1 24 "Manifest.xml"
 
 #define R_CAPTION "Samsung Kies phonebook / calendar converter"
-#define R_VERSION "1.1"
+#define R_VERSION "1.2"
 #define R_INTNAME "kiesconv"
 
 1 VERSIONINFO
-FILEVERSION 1,1,0,0
-PRODUCTVERSION 1,1,0,0
+FILEVERSION 1,2,0,0
+PRODUCTVERSION 1,2,0,0
 FILETYPE 1
 BEGIN
   BLOCK "StringFileInfo"
@@ -28,7 +28,7 @@ BEGIN
       VALUE "CompanyName", "SysTools"
       VALUE "FileDescription", R_CAPTION
       VALUE "FileVersion", R_VERSION
-      VALUE "LegalCopyright", "\xA9 SysTools 2016-2017"
+      VALUE "LegalCopyright", "\xA9 SysTools 2016-2018"
       VALUE "OriginalFilename", R_INTNAME ".exe"
       VALUE "InternalName", R_INTNAME
       VALUE "ProductName", R_CAPTION
@@ -41,7 +41,7 @@ BEGIN
   END
 END
 
-IDD_DLG DIALOG 0, 0, 304, 70
+IDD_DLG DIALOG 0, 0, 304, 84
 STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX
 CAPTION R_CAPTION " v" R_VERSION
 FONT 8, "Ms Shell Dlg"
@@ -52,8 +52,9 @@ BEGIN
   PUSHBUTTON    "Exit", IDCANCEL, 202, 47, 45, 14
   EDITTEXT      IDC_FSRC, 7,  7, 240, 15, ES_AUTOHSCROLL | ES_READONLY
   EDITTEXT      IDC_FDST, 7, 27, 240, 14, ES_AUTOHSCROLL | ES_READONLY
-  LTEXT         "\xA9 SysTools 2016-2017 | http://systools.losthost.org/?misc", IDC_SITE, 7, 52-5, 190, 8, SS_OWNERDRAW | SS_NOTIFY
-  LTEXT         "Third-party units: aes256b by Ilya Levin; Puff by Mark Adler", IDC_STATIC, 7, 60-4, 190, 8
+  LTEXT         "Third-party units: aes256b by Ilya Levin; Puff by Mark Adler", IDC_STATIC, 7, 46, 190, 8
+  LTEXT         "\xA9 SysTools 2016-2018 | http://systools.losthost.org/?misc", IDC_SITE, 7, 56, 190, 8, SS_OWNERDRAW | SS_NOTIFY
+  LTEXT         "Custom software development for your business or personal usage. Contact for more details.", IDC_STATIC, 7, 66, 288, 9
 END
 
 STRINGTABLE
